# mina

./: .gitignore  Cargo.toml  LICENSE  README.md
art/: logo-bird.xcf  logo-full.xcf
bevy/: Cargo.toml
bevy/src/: animator.rs  lib.rs  prelude.rs  selection.rs  traits.rs
core/: Cargo.toml  README.md
core/src/: animator.rs  easing.rs  glam.rs  interpolation.rs  lib.rs  time_scale.rs  timeline.rs  timeline_helpers.rs
examples/: basic_timeline.rs  delays.rs  macroless_timeline.rs  merged_timeline.rs
examples/basic_timeline/: Cargo.toml
examples/basic_timeline/src/: main.rs
examples/bevy_app/: Cargo.toml
examples/bevy_app/src/: animator_plugin.rs  arrow_button.rs  carousel.rs  characters.rs  interaction.rs  main.rs  registry.rs
examples/bevy_shapes/: Cargo.toml
examples/bevy_shapes/assets/: attribution.txt
examples/bevy_shapes/src/: animator_plugin.rs  arrow_button.rs  carousel.rs  characters.rs  main.rs  registry.rs
examples/delays/: Cargo.toml
examples/delays/src/: main.rs
examples/iced_app/: Cargo.toml
examples/iced_app/src/: main.rs
examples/iced_stopwatch/: Cargo.toml
examples/iced_stopwatch/src/: main.rs
examples/iced_widget/: Cargo.toml
examples/iced_widget/src/: attention_button.rs  expander.rs  main.rs  transformable.rs  widget_helpers.rs
examples/merged_timeline/: Cargo.toml
examples/merged_timeline/src/: main.rs
macros/: Cargo.toml  README.md
macros/src/: animate.rs  animator.rs  derive_animate.rs  fn_animator.rs  fn_timeline.rs  lib.rs
src/: lib.rs  prelude.rs
tests/: state_animator_test.rs
