[package]
name = "mina"
version = "0.1.1"
authors = ["focustense <focustense@protonmail.com>"]
edition = "2021"
description = "A simple, expressive, framework-independent animation library for Rust"
license = "MIT"
repository = "https://github.com/focustense/mina"
documentation = "https://docs.rs/mina"
readme = "README.md"
keywords = ["animation", "gui", "interface", "ui"]
categories = ["gui"]
exclude = ["/.cargo", "/.github", "/art", "/doc", "*.orig"]

[workspace]
members = [".", "core", "macros"]
default-members = [".", "core", "macros"]
resolver = "2"

[dependencies]
mina_core = { path = "core", version = "0.1.0" }
mina_macros = { path = "macros", version = "0.1.0" }

[dev-dependencies]
enum-map = "2.5.0"

[features]
glam = ["mina_core/glam"]