[package]
name = "mina_core"
version = "0.1.0"
edition = "2021"
description = "Core types and traits for mina"
license = "MIT"
repository = "https://github.com/focustense/mina"
readme = "README.md"
keywords = ["mina"]

[dependencies]
dyn-clone = "1.0.11"
enum-map = "2.5.0"
lazy_static = "1.4.0"
lyon_geom = "1.0.4"
num-traits = "0.2.15"

[dev-dependencies]
approx = "0.5.1"
ordered-float = "3.7.0"
