[package]
name = "mina_macros"
version = "0.1.0"
edition = "2021"
description = "Macros for mina"
license = "MIT"
repository = "https://github.com/focustense/mina"
readme = "README.md"
keywords = ["mina"]

[lib]
proc-macro = true
name = "mina_macros"
path = "src/lib.rs"

[features]
parse-debug = ["syn/extra-traits"]

[dependencies]
mina_core = { path = "../core", version = "0.1.0" }
proc-macro2 = "1.0.59"
quote = "1.0.28"
syn = { version = "2.0.18", features = ["full"] }
