[package]
name = "example_bevy_app"
version = "0.1.0"
edition = "2021"

# https://github.com/rust-lang/cargo/issues/7880
[workspace]

[dependencies]
bevy_mina = { path = "../../bevy" }
bevy_mod_picking = { version = "0.15.0", default-features = false }
bevy_vector_shapes = "0.5.2"
enum-map = "2.5.0"
mina = { path = "../.." }

[dependencies.bevy]
version = "0.11.3"
default_features = false
features = ["bevy_asset", "bevy_core_pipeline", "bevy_render", "bevy_sprite", "bevy_text", "bevy_ui", "bevy_winit", "png", "dynamic_linking"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
